[gd_scene load_steps=3 format=3 uid="uid://dqikvegs56uxi"]

[ext_resource type="Theme" uid="uid://cyusk16m2fbev" path="res://ui_theme.tres" id="1_dvoxg"]
[ext_resource type="Script" path="res://main_menu.gd" id="2_glip5"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( "1_dvoxg" )
script = ExtResource( "2_glip5" )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -376.0
offset_right = 376.0
offset_bottom = 283.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 96
text = "Space Courier"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -415.0
offset_top = -827.0
offset_right = 415.0
offset_bottom = -677.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_top = NodePath("../MusicSlider")
focus_neighbor_bottom = NodePath("../ToggleFullscreenButton")
focus_next = NodePath("../ToggleFullscreenButton")
focus_previous = NodePath("../MusicSlider")
text = "Start"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="ToggleFullscreenButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -415.0
offset_top = -614.0
offset_right = 415.0
offset_bottom = -464.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../StartButton")
text = "Toggle Fullscreen"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -415.0
offset_top = -398.0
offset_right = 415.0
offset_bottom = -248.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_top = NodePath("../ToggleFullscreenButton")
focus_neighbor_bottom = NodePath("../SoundSlider")
focus_next = NodePath("../SoundSlider")
focus_previous = NodePath("../ToggleFullscreenButton")
text = "Quit
"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="SoundSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -296.0
offset_top = -162.0
offset_right = 415.0
offset_bottom = -146.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../MusicSlider")
focus_next = NodePath("../MusicSlider")
focus_previous = NodePath("../QuitButton")
max_value = 1.0
step = 0.01
value = 1.0
scrollable = false
tick_count = 19
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="SoundLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -411.0
offset_top = -179.0
offset_right = -312.0
offset_bottom = -131.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Sound"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="MusicSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -296.0
offset_top = -87.0
offset_right = 415.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_top = NodePath("../SoundSlider")
focus_neighbor_bottom = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../SoundSlider")
max_value = 1.0
step = 0.01
value = 1.0
scrollable = false
tick_count = 19
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="MusicLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -411.0
offset_top = -104.0
offset_right = -312.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Music"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ToggleFullscreenButton" to="." method="_on_toggle_fullscreen_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="value_changed" from="SoundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="drag_ended" from="MusicSlider" to="." method="_on_music_slider_drag_ended"]
[connection signal="drag_started" from="MusicSlider" to="." method="_on_music_slider_drag_started"]
[connection signal="focus_entered" from="MusicSlider" to="." method="_on_music_slider_focus_entered"]
[connection signal="focus_exited" from="MusicSlider" to="." method="_on_music_slider_focus_exited"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_music_slider_value_changed"]
